Bug 258638 - KDE/Solid show disks from both HAL and udisks (double disk list in kde).
Summary: KDE/Solid show disks from both HAL and udisks (double disk list in kde).
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: libsolid (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Kevin Ottens
URL:
Keywords:
: 258808 258893 259224 259442 259515 259546 259697 260297 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-03 02:09 UTC by Fest
Modified: 2010-12-16 22:52 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fest 2010-12-03 02:09:48 UTC
Version:           unspecified (using KDE 4.5.80) 
OS:                Linux

After upgrade to 4.6 Beta, KDE register every hard drive and partition twice.

For example i have one 500GB hdd labeled "Temp". But KDE (in places/removable devices list) show: "500 GB Hard Drive" and "Temp". And so on every hdd and partiton. 

Reproducible: Didn't try
Comment 1 Pino Toscano 2010-12-03 23:38:22 UTC
Both hal and udisks running?
Comment 2 Fest 2010-12-04 10:08:29 UTC
If i understand output correctly, yes.

ps aux| grep hal
102       1776  0.0  0.1  46900  5104 ?        Ssl  11:02   0:00 /usr/sbin/hald --use-syslog --verbose=yes
root      1777  0.0  0.0  20344  1392 ?        S    11:02   0:00 hald-runner
root      1805  0.0  0.0  22468  1372 ?        S    11:02   0:00 hald-addon-input: Listening on /dev/input/event0 /dev/input/event1
102       1827  0.0  0.0  24276  1336 ?        S    11:02   0:00 /usr/libexec/hald-addon-acp

ps aux| grep udisk
root      1977  0.2  0.0 122920  3728 ?        Sl   11:03   0:00 /usr/libexec/udisks-daemon
root      1984  0.0  0.0  40560   764 ?        S    11:03   0:00 udisks-daemon: not polling any devices
fest      2742  0.0  0.0   7952   876 pts/3    S+   11:06   0:00 grep --colour=auto udisk
Comment 3 Pino Toscano 2010-12-04 11:53:15 UTC
That's the reason, then.
Comment 4 Fest 2010-12-04 12:04:30 UTC
So Solid checking both of them for info ? Why if from 4.6 Beta KDE depends on udisk ?
Comment 5 Pino Toscano 2010-12-04 20:08:29 UTC
KDE 4.6 can use both HAL and udisks for getting disks information.
If both are running, KDE/solid will expose devices coming from both.
Comment 6 Pino Toscano 2010-12-04 20:08:53 UTC
*** Bug 258808 has been marked as a duplicate of this bug. ***
Comment 7 Pino Toscano 2010-12-05 17:17:21 UTC
*** Bug 258893 has been marked as a duplicate of this bug. ***
Comment 8 David Nemeskey 2010-12-05 17:25:46 UTC
I can confirm this. See bug 258893.

(In reply to comment #5)
> KDE 4.6 can use both HAL and udisks for getting disks information.
> If both are running, KDE/solid will expose devices coming from both.
I don't see the rationale for exposing devices coming from both. Is there even a use case, when the two frameworks report different devices? Also, I reckon the information provided by the frameworks should be sufficient to identify and filter duplicates.
Comment 9 Pino Toscano 2010-12-08 18:26:58 UTC
*** Bug 259224 has been marked as a duplicate of this bug. ***
Comment 10 gpe 2010-12-08 19:11:32 UTC
I can confirm that removing the HAL resolves the issue. However minimum gimp and k3b are depending on it. If the HAL and udev running at the same time you will get duplicate info about the battery as well. 

KDE Platform Version: 4.5.80 (4.6 Beta1)
Qt Version: 4.7.1
Operating System: Linux 2.6.37-rc3-git1-6-desktop x86_64
Distribution: "openSUSE 11.4 Milestone 4 of 6 (x86_64)"
Comment 11 Frank Reininghaus 2010-12-10 18:06:53 UTC
*** Bug 259442 has been marked as a duplicate of this bug. ***
Comment 12 Pino Toscano 2010-12-12 01:20:09 UTC
*** Bug 259546 has been marked as a duplicate of this bug. ***
Comment 13 Pino Toscano 2010-12-12 01:20:10 UTC
*** Bug 259515 has been marked as a duplicate of this bug. ***
Comment 14 Dario Andres 2010-12-13 14:12:12 UTC
*** Bug 259697 has been marked as a duplicate of this bug. ***
Comment 15 Kevin Ottens 2010-12-14 07:00:12 UTC
SVN commit 1206281 by ervin:

Seems the new backends now work good enough. So retire the old HAL
backend on Linux, it's still the default on other unices though. On
Linux it can be reactivated using the SOLID_HAL_LEGACY environment
variable.

CCMAIL: kde-hardware-devel@kde.org
BUG: 258638


 M  +17 -9     solid/managerbase.cpp  
 M  +5 -0      tests/halbasictest.cpp  
 M  +2 -0      tests/halbasictest.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1206281
Comment 16 Pino Toscano 2010-12-16 22:52:10 UTC
*** Bug 260297 has been marked as a duplicate of this bug. ***