Seems the new backends now work good enough. So retire the old HAL backend on Linux, it's still the default on other unices though. On Linux it can be reactivated using the SOLID_HAL_LEGACY environment variable.

CCMAIL: kde-hardware-devel@kde.org
BUG: 258638

svn path=/trunk/KDE/kdelibs/; revision=1206281