solid/solid/managerbase.cpp
@@ -65,24 +65,32 @@ void Solid::ManagerBasePrivate::loadBackends()
     if (!solidFakeXml.isEmpty()) {
         m_backends << new Solid::Backends::Fake::FakeManager(0, solidFakeXml);
     } else {
-#        if defined (Q_OS_MAC)
+#        if defined(Q_OS_MAC)
             m_backends << new Solid::Backends::IOKit::IOKitManager(0);
-#        elif defined (Q_OS_UNIX)
-#           if defined (UDEV_FOUND)
-                m_backends << new Solid::Backends::UDev::UDevManager(0);
-#           endif
-            m_backends << new Solid::Backends::Hal::HalManager(0)
-// FIXME: the udisks backend used to build on !Linux too
-#           if defined (Q_OS_LINUX)
-                       << new Solid::Backends::UDisks::UDisksManager(0)
-#           endif
-                       << new Solid::Backends::UPower::UPowerManager(0)
-                       << new Solid::Backends::Fstab::FstabManager(0);
+
+#        elif defined(Q_WS_WIN) && defined(HAVE_WBEM) && !defined(_WIN32_WCE)
+            m_backends << new Solid::Backends::Wmi::WmiManager(0);
+
+#        elif defined(Q_OS_UNIX) && !defined(Q_OS_LINUX)
+            m_backends << new Solid::Backends::Hal::HalManager(0);
+
+#        elif defined(Q_OS_LINUX)
+            bool solidHalLegacyEnabled
+                = QString::fromLocal8Bit(qgetenv("SOLID_HAL_LEGACY")).toInt()==1;
+            if (solidHalLegacyEnabled) {
+                m_backends << new Solid::Backends::Hal::HalManager(0);
+            } else {
+#               if defined(UDEV_FOUND)
+                    m_backends << new Solid::Backends::UDev::UDevManager(0);
+#               endif
+                m_backends << new Solid::Backends::UDisks::UDisksManager(0)
+                           << new Solid::Backends::UPower::UPowerManager(0)
+                           << new Solid::Backends::Fstab::FstabManager(0);
+            }
+#        endif
+
 #        if defined (HUPNP_FOUND)
             m_backends << new Solid::Backends::UPnP::UPnPDeviceManager(0);
-#        endif
-#        elif defined (Q_WS_WIN) && defined(HAVE_WBEM) && !defined(_WIN32_WCE)
-            m_backends << new Solid::Backends::Wmi::WmiManager(0);
 #        endif
     }
 }
